--- a/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Service.cs.vm
+++ b/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Service.cs.vm
@@ -1,3 +1,9 @@
+using Admin.NET.Core;
+using Furion.DependencyInjection;
+using Furion.DynamicApiController;
+using Microsoft.AspNetCore.Mvc;
+using Furion.FriendlyException;
+using Mapster;
 using @(@Model.NameSpace).Const;
 
 namespace @Model.NameSpace;
