--- a/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/index.vue.vm
+++ b/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/index.vue.vm
@@ -164,71 +164,71 @@
 		const loading = ref(false);
 		const tableData = ref<any>([]);
 const queryParams = ref<any>
-	({});
-	const tableParams = ref({
-	page: 1,
-	pageSize: 10,
-	total: 0,
-	});
-	const edit@(@Model.ClassName)Title = ref("");
+  ({});
+  const tableParams = ref({
+  page: 1,
+  pageSize: 10,
+  total: 0,
+  });
+  const edit@(@Model.ClassName)Title = ref("");
 
 
-	// 查询操作
-	const handleQuery = async () => {
-	loading.value = true;
-	var res = await page@(@Model.ClassName)(Object.assign(queryParams.value, tableParams.value));
-	tableData.value = res.data.result?.items ?? [];
-	tableParams.value.total = res.data.result?.total;
-	loading.value = false;
-	@foreach (var column in Model.QueryWhetherList){
-	if(@column.EffectType == "Select"){
-	@:get@(@column.LowerColumnName)Data.value = await dictTypeDataList('@(@column.DictTypeCode)');
-	}
-	}
-	};
+  // 查询操作
+  const handleQuery = async () => {
+  loading.value = true;
+  var res = await page@(@Model.ClassName)(Object.assign(queryParams.value, tableParams.value));
+  tableData.value = res.data.result?.items ?? [];
+  tableParams.value.total = res.data.result?.total;
+  loading.value = false;
+  @foreach (var column in Model.QueryWhetherList){
+  if(@column.EffectType == "Select"){
+  @:get@(@column.LowerColumnName)Data.value = await dictTypeDataList('@(@column.DictTypeCode)');
+  }
+  }
+  };
 
-	// 打开新增页面
-	const openAdd@(@Model.ClassName) = () => {
-	edit@(@Model.ClassName)Title.value = '添加@(@Model.BusName)';
-	editDialogRef.value.openDialog({});
-	};
+  // 打开新增页面
+  const openAdd@(@Model.ClassName) = () => {
+  edit@(@Model.ClassName)Title.value = '添加@(@Model.BusName)';
+  editDialogRef.value.openDialog({});
+  };
 
-	// 打开编辑页面
-	const openEdit@(@Model.ClassName) = (row: any) => {
-	edit@(@Model.ClassName)Title.value = '编辑@(@Model.BusName)';
-	editDialogRef.value.openDialog(row);
-	};
+  // 打开编辑页面
+  const openEdit@(@Model.ClassName) = (row: any) => {
+  edit@(@Model.ClassName)Title.value = '编辑@(@Model.BusName)';
+  editDialogRef.value.openDialog({...row});
+  };
 
-	// 删除
-	const del@(@Model.ClassName) = (row: any) => {
-	ElMessageBox.confirm(`确定要删除吗?`, "提示", {
-	confirmButtonText: "确定",
-	cancelButtonText: "取消",
-	type: "warning",
-	})
-	.then(async () => {
-	await delete@(@Model.ClassName)(row);
-	handleQuery();
-	ElMessage.success("删除成功");
-	})
-	.catch(() => {});
-	};
+  // 删除
+  const del@(@Model.ClassName) = (row: any) => {
+  ElMessageBox.confirm(`确定要删除吗?`, "提示", {
+  confirmButtonText: "确定",
+  cancelButtonText: "取消",
+  type: "warning",
+  })
+  .then(async () => {
+  await delete@(@Model.ClassName)(row);
+  handleQuery();
+  ElMessage.success("删除成功");
+  })
+  .catch(() => {});
+  };
 
-	// 改变页面容量
-	const handleSizeChange = (val: number) => {
-	tableParams.value.pageSize = val;
-	handleQuery();
-	};
+  // 改变页面容量
+  const handleSizeChange = (val: number) => {
+  tableParams.value.pageSize = val;
+  handleQuery();
+  };
 
-	// 改变页码序号
-	const handleCurrentChange = (val: number) => {
-	tableParams.value.page = val;
-	handleQuery();
-	};
+  // 改变页码序号
+  const handleCurrentChange = (val: number) => {
+  tableParams.value.page = val;
+  handleQuery();
+  };
 
-	@foreach (var column in Model.QueryWhetherList){
-	if(@column.EffectType == "fk"){
-	@:const @LowerFirstLetter(@column.FkEntityName)DropdownList = ref<any>([]); 
+  @foreach (var column in Model.QueryWhetherList){
+  if(@column.EffectType == "fk"){
+  @:const @LowerFirstLetter(@column.FkEntityName)DropdownList = ref<any>([]); 
 @:const get@(@column.FkEntityName)DropdownList = async () => {
     @:let list = await get@(@column.FkEntityName)Dropdown();
     @:@LowerFirstLetter(@column.FkEntityName)DropdownList.value = list.data.result ?? [];
